--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
-
+spring.datasource.url = jdbc:mysql://localhost:3306/studentmsdb
+spring.datasource.driverClassName = com.mysql.cj.jdbc.Driver
+spring.datasource.username=studentmanager
+spring.datasource.password=D6tQQsQWqf9iSS$
+  
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create
+  
+spring.thymeleaf.cache=false
