--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create
   
 spring.thymeleaf.cache=false
+
+logging.level.org.hibertine.QSL=DEBUG
