--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.datasource.url = jdbc:mysql://localhost:3306/studentmsdb
+spring.datasource.url = jdbc:mysql://us-cdbr-east-06.cleardb.net:3306/heroku_0120961e3352996?reconnect=true
 spring.datasource.driverClassName = com.mysql.cj.jdbc.Driver
-spring.datasource.username=studentmanager
-spring.datasource.password=D6tQQsQWqf9iSS$
+spring.datasource.username=b00a1715285e8a
+spring.datasource.password=f2c757c2
   
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
